--- a/Dicegame.html
+++ b/Dicegame.html
@@ -28,11 +28,12 @@
       </div>
       <!-- ajout colonne 2 -->
       <div class="col-sm column2">
-        <button>NEW GAME</button>
+        <button id="btn3" class="btn btn-outline-primary btn-lg mb-2">NEW GAME</button>
          <canvas id="diceCanvas" width="1000" height="1000" class="container-fluid"></canvas>
-         <button>ROLL DICE</button>
-         <button>HOLD</button>
-
+         <container class="btn-group-vertical" role="group">
+         <button id="btn1" class="btn btn-outline-success btn-sm mb-2 btn btn-secondary">ROLL DICE</button>
+         <button id ="btn2" class="btn btn-outline-success btn-sm mb-2 btn btn-secondary">HOLD</button>
+        </container>
        <!-- <canvas id="canvas_animate" width="100" height="100" class="container-fluid" ></canvas> -->
       </div>
       <!-- ajout colonne 3 -->
