--- a/Dicegame.html
+++ b/Dicegame.html
@@ -17,41 +17,45 @@
 </head>
 
 <body>
-  <!-- ajout de 3 colonnes -->
+  <!-- ajout de 3 colonnes bootstrap -->
   <div class="container">
     <div class="row">
-      <!-- ajout colonne 1 -->
-      <div class="col-sm bordure">
-       <!-- <h2>Joueur 1</h2>-->
-        <canvas id="canvasP1" width="1000" height="1500" class="container-fluid"></canvas>
-       <!-- <ul>Scoreglobal joueur1</ul>-->
+      <!-- ajout colonne 1: player 1"col-sm 
+      " col-auto col-md bg-success bg-light border border-success marginTop -->
+      <div class="col-sm column2 columnBackground marginTop">
+        <h2>Player 1</h2>
+        <canvas id="canvasP1" width="2000" height="400" class="container-fluid"></canvas>
+        <h2 class="marginBottom" id="scoreP1"></h2>
+        <div class="borderCurrent">
+          <h5 class="marginTop2">Current</h5>
+          <h5 class="marginBottom" id="currentScoreP1"></h5>
+        </div>
       </div>
-      <!-- ajout colonne 2 -->
-      <div class="col-sm column2">
+      <!-- ajout colonne 2 avec les 3 boutons et le dé dessiné sur un canvas-->
+      <div class="col-sm column2 columnBackground">
         <button id="btn3" class="btn btn-outline-primary btn-lg mb-2">NEW GAME</button>
-         <canvas id="diceCanvas" width="1000" height="1000" class="container-fluid"></canvas>
-         <container class="btn-group-vertical" role="group">
-         <button id="btn1" class="btn btn-outline-success btn-sm mb-2 btn btn-secondary">ROLL DICE</button>
-         <button id ="btn2" class="btn btn-outline-success btn-sm mb-2 btn btn-secondary">HOLD</button>
+        <canvas id="diceCanvas" width="1000" height="1000" class="container-fluid"></canvas>
+        <container class="btn-group-vertical" role="group">
+          <button id="btn1" class="btn btn-outline-success btn-sm mb-2 btn btn-secondary">ROLL DICE</button>
+          <button id="btn2" class="btn btn-outline-success btn-sm mb-2 btn btn-secondary">HOLD</button>
         </container>
-       <!-- <canvas id="canvas_animate" width="100" height="100" class="container-fluid" ></canvas> -->
       </div>
-      <!-- ajout colonne 3 -->
-      <div class="col-sm bordure">
-      <!--  <h2>Joueur 2</h2> -->
-      <!---  <ul>Scoreglobal joueur2</ul> -->
-        <canvas id="canvasP2" width="1000" height="1500" class="container-fluid"></canvas>
-          </div>
+      <!-- ajout colonne 3: player 2-->
+      <div class="col-sm column2 columnBackground marginTop">
+        <h2>Player 2</h2>
+        <canvas id="canvasP2" width="2000" height="400" class="container-fluid"></canvas>
+        <h2 class="marginBottom" id="scoreP2"></h2>
+        <div class="borderCurrent">
+          <h5 class="marginTop2">Current</h5>
+          <h5 class="marginBottom" id="currentScoreP2"></h5>
+        </div>
+      </div>
     </div>
   </div>
- 
-  <!--<script type="module"> </script> -->
+
+
+  <!--lien CDN vers la librairie JQUERY, utilisable pour alimenter les scores current et global !-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="script.js" type="text/javascript"></script>
-  
-  <!--
-  !-->
-
-
 </body>
-
 </html>
